[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "cryptocurrencies_analyzer"
version = "0.0.1"
description = "The user will be able to see historical information related to the selected cryptocurrency."
authors = [
  { name = "AT3-group-18" },
]
license = { file = "LICENSE" }
readme = "README.md"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License"
]
requires-python = "~=3.10.0"


[tool.ruff]
line-length = 99
src = ["cryptocurrencies_analyzer"]
include = ["pyproject.toml", "cryptocurrencies_analyzer/**/*.py"]

[tool.ruff.lint]
extend-select = ["I"]  # Add import sorting

[tool.ruff.lint.isort]
known-first-party = ["cryptocurrencies_analyzer"]
force-sort-within-sections = true

